# pixal

./: .gitignore  README.md  cli.py  log.txt  out.txt  pyproject.toml  requirements.txt  setup.py  setup.sh
configs/: config.yaml  parameters.yaml  paths.yaml
pixal/: cli.py  config_loader.py  mlflow_utils.py
pixal/modules/: config_loader.py  flip_image_180.py  model_training.py  plotting.py  preproc_module.py  preprocessing.py
pixal/preprocessing/: align_images.py  imagePreprocesser.py  imagePreprocessor.py  image_stack.py  remove_background.py  runner.py
pixal/preprocessing/modules/: preproc_module.py
pixal/train_model/: autoencoder.py  run_training.py  train_autoencoder.py  train_model.py  train_one_hot.py  validate_image.py
pixal/validate/: detect.py  runner.py  validate_one_model.py
preprocessing/: align_images.py  imagePreprocesser.py  remove_background.py  runner.py
