[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixal"
version = "0.5.1"
description = "PIXel-based Anomaly Detection Tool for ATLAS Components"
authors = [{ name = "Dr. Jacob E. Crosby" }]

# ⬇️ tensorflow removed from here to avoid accidental upgrades
dependencies = [
  "rembg",
  "pillow",
  "paramiko",
  "numpy",
  "argparse",
  "openhtf",
  "pandas",
  "pymongo",
  "pyyaml",
  "scikit-learn",
  "opencv-python",
  "numba",
  "matplotlib",
  "tqdm",
  "ruamel.yaml",
  "absl-py>=1.4,<3",
  "mlflow>=2.4,<3.0"
]

[project.optional-dependencies]
# macOS CPU path
mac = ["onnxruntime"]

# For GPU setups
gpu = ["tensorflow[and-cuda]==2.17.0","onnxruntime-gpu"]

[project.scripts]
pixal = "pixal.cli:main"

[tool.setuptools.packages.find]
include = ["pixal"]
